--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ h1 {
                     <td><button class="btn btn-outline-secondary btn-sm btn-copy" onclick="copiarLink('https://www.mediafire.com/file/agf9tw9evmdouf1/SSCOM-Long_Life.zip/file')" data-bs-toggle="tooltip" data-bs-placement="top" title="Copiar Link"><i class="bi bi-clipboard"></i></button></td>
                 </tr>
                 <tr>
-                    <td><i class="bi bi-file-earmark-zip-fill icon-file text-warning"></i> Driver Windows 10 | Configurador </td>
+                    <td><i class="bi bi-file-earmark-zip-fill icon-file text-warning"></i> Driver Windows 10</td>
                     <td><a href="https://www.mediafire.com/file/eh19c2npfe6vxdu/windows10.zip/file" target="_blank" class="btn btn-outline-success btn-sm btn-download" data-bs-toggle="tooltip" data-bs-placement="top" title="Download do Arquivo ZIP"><i class="bi bi-download"></i></a></td>
                     <td><button class="btn btn-outline-secondary btn-sm btn-copy" onclick="copiarLink('https://www.mediafire.com/file/eh19c2npfe6vxdu/windows10.zip/file')" data-bs-toggle="tooltip" data-bs-placement="top" title="Copiar Link"><i class="bi bi-clipboard"></i></button></td>
                 </tr>
@@ -110,52 +110,52 @@ h1 {
                 </tr>
                 <tr>
                     <td><i class="bi bi-camera-video-fill icon-file text-danger"></i> Abrir Rastreador 4G</td>
-                    <td><a href="https://www.mediafire.com/file/i83ccbmy76gu0hu/Equipamento4Gabrir.mp4/file" target="_blank" class="btn btn-outline-success btn-sm btn-download" data-bs-toggle="tooltip" data-bs-placement="top" title="Download"><i class="bi bi-play-btn"></i></a></td>
+                    <td><a href="https://www.mediafire.com/file/i83ccbmy76gu0hu/Equipamento4Gabrir.mp4/file" target="_blank" class="btn btn-outline-success btn-sm btn-download" data-bs-toggle="tooltip" data-bs-placement="top" title="Assistir Vídeo"><i class="bi bi-play-btn"></i></a></td>
                     <td><button class="btn btn-outline-secondary btn-sm btn-copy" onclick="copiarLink('https://www.mediafire.com/file/i83ccbmy76gu0hu/Equipamento4Gabrir.mp4/file')" data-bs-toggle="tooltip" data-bs-placement="top" title="Copiar Link"><i class="bi bi-clipboard"></i></button></td>
                 </tr>
                 <tr>
                     <td><i class="bi bi-camera-video-fill icon-file text-danger"></i> Procedimento dos ferrinhos</td>
-                    <td><a href="https://www.mediafire.com/file/gv5qekf08cd8ius/procedimento_dos_ferrinhos_3.mp4/file" target="_blank" class="btn btn-outline-success btn-sm btn-download" data-bs-toggle="tooltip" data-bs-placement="top" title="Download"><i class="bi bi-play-btn"></i></a></td>
+                    <td><a href="https://www.mediafire.com/file/gv5qekf08cd8ius/procedimento_dos_ferrinhos_3.mp4/file" target="_blank" class="btn btn-outline-success btn-sm btn-download" data-bs-toggle="tooltip" data-bs-placement="top" title="Assistir Vídeo"><i class="bi bi-play-btn"></i></a></td>
                     <td><button class="btn btn-outline-secondary btn-sm btn-copy" onclick="copiarLink('https://www.mediafire.com/file/gv5qekf08cd8ius/procedimento_dos_ferrinhos_3.mp4/file')" data-bs-toggle="tooltip" data-bs-placement="top" title="Copiar Link"><i class="bi bi-clipboard"></i></button></td>
                 </tr>
                 <tr>
                     <td><i class="bi bi-file-earmark-pdf-fill icon-file text-info"></i> Manual NB2</td>
-                    <td><a href="https://www.mediafire.com/file/mrejigu5gbonjy5/Manual_BWS_NB2_v1.0.0.pdf/file" target="_blank" class="btn btn-outline-success btn-sm btn-download" data-bs-toggle="tooltip" data-bs-placement="top" title="Download"><i class="bi bi-book"></i></a></td>
+                    <td><a href="https://www.mediafire.com/file/mrejigu5gbonjy5/Manual_BWS_NB2_v1.0.0.pdf/file" target="_blank" class="btn btn-outline-success btn-sm btn-download" data-bs-toggle="tooltip" data-bs-placement="top" title="Ver Manual PDF"><i class="bi bi-book"></i></a></td>
                     <td><button class="btn btn-outline-secondary btn-sm btn-copy" onclick="copiarLink('https://www.mediafire.com/file/mrejigu5gbonjy5/Manual_BWS_NB2_v1.0.0.pdf/file')" data-bs-toggle="tooltip" data-bs-placement="top" title="Copiar Link"><i class="bi bi-clipboard"></i></button></td>
                 </tr>
                 <tr>
                     <td><i class="bi bi-file-earmark-pdf-fill icon-file text-info"></i> BWFleets</td>
-                    <td><a href="https://www.mediafire.com/file/vgfofipyh4xpg2h/Manual_BWfleets_1.0.0.pdf/file" target="_blank" class="btn btn-outline-success btn-sm btn-download" data-bs-toggle="tooltip" data-bs-placement="top" title="Download"><i class="bi bi-book"></i></a></td>
+                    <td><a href="https://www.mediafire.com/file/vgfofipyh4xpg2h/Manual_BWfleets_1.0.0.pdf/file" target="_blank" class="btn btn-outline-success btn-sm btn-download" data-bs-toggle="tooltip" data-bs-placement="top" title="Ver Manual PDF"><i class="bi bi-book"></i></a></td>
                     <td><button class="btn btn-outline-secondary btn-sm btn-copy" onclick="copiarLink('https://www.mediafire.com/file/vgfofipyh4xpg2h/Manual_BWfleets_1.0.0.pdf/file')" data-bs-toggle="tooltip" data-bs-placement="top" title="Copiar Link"><i class="bi bi-clipboard"></i></button></td>
                 </tr>
                 <tr>
                     <td><i class="bi bi-file-earmark-pdf-fill icon-file text-info"></i> Manual E3+ 4G</td>
-                    <td><a href="https://www.mediafire.com/file/x4iluy7qyavr9g4/E3%252B4G_Manual_de_usuario_v1.0.1.pdf/file" target="_blank" class="btn btn-outline-success btn-sm btn-download" data-bs-toggle="tooltip" data-bs-placement="top" title="Download"><i class="bi bi-book"></i></a></td>
+                    <td><a href="https://www.mediafire.com/file/x4iluy7qyavr9g4/E3%252B4G_Manual_de_usuario_v1.0.1.pdf/file" target="_blank" class="btn btn-outline-success btn-sm btn-download" data-bs-toggle="tooltip" data-bs-placement="top" title="Ver Manual PDF"><i class="bi bi-book"></i></a></td>
                     <td><button class="btn btn-outline-secondary btn-sm btn-copy" onclick="copiarLink('https://www.mediafire.com/file/x4iluy7qyavr9g4/E3%252B4G_Manual_de_usuario_v1.0.1.pdf/file')" data-bs-toggle="tooltip" data-bs-placement="top" title="Copiar Link"><i class="bi bi-clipboard"></i></button></td>
                 </tr>
                 <tr>
                     <td><i class="bi bi-file-earmark-pdf-fill icon-file text-info"></i> Manual E3+ 2G</td>
-                    <td><a href="https://www.mediafire.com/file/9bzt1q72mpbjvid/Manual_E3%252BLONGLIFE_V.1.0.pdf/file" target="_blank" class="btn btn-outline-success btn-sm btn-download" data-bs-toggle="tooltip" data-bs-placement="top" title="Download"><i class="bi bi-book"></i></a></td>
+                    <td><a href="https://www.mediafire.com/file/9bzt1q72mpbjvid/Manual_E3%252BLONGLIFE_V.1.0.pdf/file" target="_blank" class="btn btn-outline-success btn-sm btn-download" data-bs-toggle="tooltip" data-bs-placement="top" title="Ver Manual PDF"><i class="bi bi-book"></i></a></td>
                     <td><button class="btn btn-outline-secondary btn-sm btn-copy" onclick="copiarLink('https://www.mediafire.com/file/9bzt1q72mpbjvid/Manual_E3%252BLONGLIFE_V.1.0.pdf/file')" data-bs-toggle="tooltip" data-bs-placement="top" title="Copiar Link"><i class="bi bi-clipboard"></i></button></td>
                 </tr>
                 <tr>
                     <td><i class="bi bi-file-earmark-pdf-fill icon-file text-info"></i> Manual E3+ LONG LIFE</td>
-                    <td><a href="https://www.mediafire.com/file/9bzt1q72mpbjvid/Manual_E3%252BLONGLIFE_V.1.0.pdf/file" target="_blank" class="btn btn-outline-success btn-sm btn-download" data-bs-toggle="tooltip" data-bs-placement="top" title="Download"><i class="bi bi-book"></i></a></td>
+                    <td><a href="https://www.mediafire.com/file/9bzt1q72mpbjvid/Manual_E3%252BLONGLIFE_V.1.0.pdf/file" target="_blank" class="btn btn-outline-success btn-sm btn-download" data-bs-toggle="tooltip" data-bs-placement="top" title="Ver Manual PDF"><i class="bi bi-book"></i></a></td>
                     <td><button class="btn btn-outline-secondary btn-sm btn-copy" onclick="copiarLink('https://www.mediafire.com/file/9bzt1q72mpbjvid/Manual_E3%252BLONGLIFE_V.1.0.pdf/file')" data-bs-toggle="tooltip" data-bs-placement="top" title="Copiar Link"><i class="bi bi-clipboard"></i></button></td>
                 </tr>
                 <tr>
                     <td><i class="bi bi-file-earmark-pdf-fill icon-file text-info"></i> Manual E3+ PERSONAL</td>
-                    <td><a href="https://www.mediafire.com/file/0pmgw9fntnvu1ui/MANUAL_E3%252BPERSONAL_V1.0.pdf/file" target="_blank" class="btn btn-outline-success btn-sm btn-download" data-bs-toggle="tooltip" data-bs-placement="top" title="Download"><i class="bi bi-book"></i></a></td>
+                    <td><a href="https://www.mediafire.com/file/0pmgw9fntnvu1ui/MANUAL_E3%252BPERSONAL_V1.0.pdf/file" target="_blank" class="btn btn-outline-success btn-sm btn-download" data-bs-toggle="tooltip" data-bs-placement="top" title="Ver Manual PDF"><i class="bi bi-book"></i></a></td>
                     <td><button class="btn btn-outline-secondary btn-sm btn-copy" onclick="copiarLink('https://www.mediafire.com/file/0pmgw9fntnvu1ui/MANUAL_E3%252BPERSONAL_V1.0.pdf/file')" data-bs-toggle="tooltip" data-bs-placement="top" title="Copiar Link"><i class="bi bi-clipboard"></i></button></td>
                 </tr>
                 <tr>
                     <td><i class="bi bi-file-earmark-pdf-fill icon-file text-info"></i> Manual Instalação | 4 Pinos</td>
-                    <td><a href="https://www.mediafire.com/file/8udf2c49em0cgq7/E3%252B_MANUAL_DE_INSTALA%25C3%2587%25C3%2583O_V.1.1_2021_11_08_%25284p%2529.pdf/file" target="_blank" class="btn btn-outline-success btn-sm btn-download" data-bs-toggle="tooltip" data-bs-placement="top" title="Download"><i class="bi bi-book"></i></a></td>
+                    <td><a href="https://www.mediafire.com/file/8udf2c49em0cgq7/E3%252B_MANUAL_DE_INSTALA%25C3%2587%25C3%2583O_V.1.1_2021_11_08_%25284p%2529.pdf/file" target="_blank" class="btn btn-outline-success btn-sm btn-download" data-bs-toggle="tooltip" data-bs-placement="top" title="Ver Manual PDF"><i class="bi bi-book"></i></a></td>
                     <td><button class="btn btn-outline-secondary btn-sm btn-copy" onclick="copiarLink('https://www.mediafire.com/file/8udf2c49em0cgq7/E3%252B_MANUAL_DE_INSTALA%25C3%2587%25C3%2583O_V.1.1_2021_11_08_%25284p%2529.pdf/file')" data-bs-toggle="tooltip" data-bs-placement="top" title="Copiar Link"><i class="bi bi-clipboard"></i></button></td>
                 </tr>
                 <tr>
                     <td><i class="bi bi-file-earmark-pdf-fill icon-file text-info"></i> Manual Instalação | 5 Pinos</td>
-                    <td><a href="https://www.mediafire.com/file/xrty76lof7s8pri/E3%252B5pin_MANUAL_DO_USU%25C3%258IO_V.1.0_%25282%2529.pdf/file" target="_blank" class="btn btn-outline-success btn-sm btn-download" data-bs-toggle="tooltip" data-bs-placement="top" title="Download"><i class="bi bi-book"></i></a></td>
+                    <td><a href="https://www.mediafire.com/file/xrty76lof7s8pri/E3%252B5pin_MANUAL_DO_USU%25C3%258IO_V.1.0_%25282%2529.pdf/file" target="_blank" class="btn btn-outline-success btn-sm btn-download" data-bs-toggle="tooltip" data-bs-placement="top" title="Ver Manual PDF"><i class="bi bi-book"></i></a></td>
                     <td><button class="btn btn-outline-secondary btn-sm btn-copy" onclick="copiarLink('https://www.mediafire.com/file/xrty76lof7s8pri/E3%252B5pin_MANUAL_DO_USU%25C3%258IO_V.1.0_%25282%2529.pdf/file')" data-bs-toggle="tooltip" data-bs-placement="top" title="Copiar Link"><i class="bi bi-clipboard"></i></button></td>
                 </tr>
 
